fix(order history): better alignment of headers

--- a/assets/css/modules/_buy-sell.scss
+++ b/assets/css/modules/_buy-sell.scss
@@ -429,3 +429,10 @@ i.ti-credit-card.bank {
 .find-partner {
   height: 350px;
 }
+
+.pl7em {
+  padding-left: 2em;
+  @media(min-width: 992px) {
+    padding-left: 7em;
+  }
+}
